src/components/home/Hero.module.css
.hero::before {
  position: absolute;
  content: "";
  top: 0%;
  bottom: 10%;
  width: 100%;
  background-color: var(--background);
  background: var(--hero-background);
  -webkit-mask-image: var(--hero-background-mask);
  mask-image: var(--hero-background-mask);
}

@media (max-width: 767px) {
  .hiddenMobile {
    display: none;
  }
}

